--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                 </section>
                 @if (User.Identity.IsAuthenticated)
                 {
-                    <nav class="navbar navbar-default">
+                    <nav class="navbar navbar-default" style="margin-bottom: 10px;">
                         <div class="container-fluid">
                             <!-- Collect the nav links, forms, and other content for toggling -->
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
