--- a/Thermory.Web/Views/Catalog/_LumberProductForm.cshtml
+++ b/Thermory.Web/Views/Catalog/_LumberProductForm.cshtml
@@ -12,11 +12,11 @@
     <table>
         <tr>
             <td>
-                <label class="lumberProductView">@Model.LumberProduct.LengthInMillimeters</label>
+                <label id="@string.Format("lengthView{0}", suffix)" class="lumberProductView">@Model.LumberProduct.LengthInMillimeters</label>
                 <label class="lumberProductForm" for="lumberProductName">Length in millimeters</label>
             </td>
             <td>
-                <div type="button" class="btn btn-primary lumberProductView" onclick="initiateLumberProductEditMode()">
+                <div type="button" class="btn btn-primary lumberProductView" onclick="initiateEditMode('lumberProduct')">
                     <span class="glyphicon glyphicon-edit"></span> Edit
                 </div>
                 <input type="text" class="form-control lumberProductForm numeric" name="lumberProductName" id="@string.Format("length{0}", suffix)" value="@Model.LumberProduct.LengthInMillimeters" placeholder="Length in millimeters" />
@@ -27,12 +27,12 @@
         <div type="button" class="btn btn-success lumberProductForm" onclick="saveLumberProduct('@suffix');">
             <span class="glyphicon glyphicon-ok"></span> Save
         </div>
-        <div type="button" class="btn btn-danger lumberProductForm" onclick="initiateLumberProductViewMode();">
+        <div type="button" class="btn btn-danger lumberProductForm" onclick="initiateViewMode('lumberProduct');">
             <span class="glyphicon glyphicon-remove"></span> Cancel
         </div>
     </div>
     <div class="panel panel-danger lumberProductErrorPanel" style="display: none;">
         <div class="panel-heading">Error</div>
-        <div id="@string.Format("lumberProductError{0}{1}", Model.LumberProduct.LumberTypeId, @Model.LumberProduct.Id)" class="panel-body"></div>
+        <div id="@string.Format("lumberProductError{0}", suffix)" class="panel-body"></div>
     </div>
 </div>
