--- a/Thermory.Web/Views/Catalog/_LumberTypeForm.cshtml
+++ b/Thermory.Web/Views/Catalog/_LumberTypeForm.cshtml
@@ -17,7 +17,7 @@
                 <label class="lumberTypeForm" for="lumberTypeName">Lumber Type Name</label>
             </td>
             <td>
-                <div type="button" class="btn btn-primary lumberTypeView" onclick="initiateLumberTypeEditMode()">
+                <div type="button" class="btn btn-primary lumberTypeView" onclick="initiateEditMode('lumberType')">
                     <span class="glyphicon glyphicon-edit"></span> Edit
                 </div>
                 <input type="text" class="form-control lumberTypeForm" name="lumberTypeName" id="@string.Format("name{0}", suffix)" value="@Model.LumberType.Name" placeholder="Lumber Type Name" />
@@ -28,7 +28,7 @@
         <div type="button" class="btn btn-success lumberTypeForm" onclick="saveLumberType('@suffix');">
             <span class="glyphicon glyphicon-ok"></span> Save
         </div>
-        <div type="button" class="btn btn-danger lumberTypeForm" onclick="initiateLumberTypeViewMode();">
+        <div type="button" class="btn btn-danger lumberTypeForm" onclick="initiateViewMode('lumberType');">
             <span class="glyphicon glyphicon-remove"></span> Cancel
         </div>
     </div>
@@ -36,37 +36,40 @@
         <div class="panel-heading">Error</div>
         <div id="@string.Format("lumberTypeError{0}{1}", Model.LumberType.LumberSubCategoryId, @Model.LumberType.Id)" class="panel-body"></div>
     </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">Products</div>
-        <div class="panel-body">
-            @{
-                var firstLumberTypeId = Model.LumberType.LumberProducts.Any() ? Model.LumberType.LumberProducts.OrderBy(p => p.LengthInMillimeters).First().Id : Guid.Empty;
-                <ul class="nav nav-tabs" data-tabs="tabs">
-                    @foreach (var lumberProduct in Model.LumberType.LumberProducts.OrderBy(p => p.LengthInMillimeters))
-                    {
-                        active = lumberProduct.Id == firstLumberTypeId ? "active" : "";
-                        <li class="lumberProductTab @active"><a id="@string.Format("lumberProductLink{0}{1}", Model.LumberType.Id, lumberProduct.Id)" href="#@string.Format("lumberProductTab{0}{1}", Model.LumberType.Id, lumberProduct.Id)" data-toggle="tab">@lumberProduct.LengthInMillimeters</a></li>
-                    }
-                    @if (Model.LumberType.Id != Guid.Empty)
-                    {
-                        active = firstLumberTypeId == Guid.Empty ? "class=active" : "";
-                        <li class="lumberProductTab @active"><a id="@string.Format("lumberProductLink{0}{1}", Model.LumberType.Id, Guid.Empty)" href="#@string.Format("lumberProductTab{0}{1}", Model.LumberType.Id, Guid.Empty)" data-toggle="tab"><span class="glyphicon glyphicon-plus"></span> Add</a></li>
-                    }
-                </ul>
-                <div class="tab-content">
-                    @{ LumberProductViewModel lumberProductViewModel;}
-                    @foreach (var lumberProduct in Model.LumberType.LumberProducts.OrderBy(p => p.LengthInMillimeters))
-                    {
-                        lumberProductViewModel = new LumberProductViewModel { Active = lumberProduct.Id == firstLumberTypeId, LumberProduct = lumberProduct };
-                        @Html.Partial("_LumberProductForm", lumberProductViewModel)
-                    }
-                    @if (Model.LumberType.Id != Guid.Empty)
-                    {
-                        lumberProductViewModel = new LumberProductViewModel { Active = !Model.LumberType.LumberProducts.Any(), LumberProduct = new LumberProduct { LumberTypeId = Model.LumberType.Id } };
-                        @Html.Partial("_LumberProductForm", lumberProductViewModel)
-                    }
+    @{
+        var firstLumberTypeId = Model.LumberType.LumberProducts.Any() ? Model.LumberType.LumberProducts.OrderBy(p => p.LengthInMillimeters).First().Id : Guid.Empty;
+        if (Model.LumberType.Id != Guid.Empty)
+        {
+            <div class="panel panel-default">
+                <div class="panel-heading">Products</div>
+                <div class="panel-body">
+                    <ul class="nav nav-tabs" data-tabs="tabs">
+                        @foreach (var lumberProduct in Model.LumberType.LumberProducts.OrderBy(p => p.LengthInMillimeters))
+                        {
+                            active = lumberProduct.Id == firstLumberTypeId ? "active" : "";
+                            <li class="lumberProductTab @active"><a id="@string.Format("lumberProductLink{0}{1}", Model.LumberType.Id, lumberProduct.Id)" href="#@string.Format("lumberProductTab{0}{1}", Model.LumberType.Id, lumberProduct.Id)" data-toggle="tab">@lumberProduct.LengthInMillimeters</a></li>
+                        }
+                        @if (Model.LumberType.Id != Guid.Empty)
+                        {
+                            active = firstLumberTypeId == Guid.Empty ? "class=active" : "";
+                            <li class="lumberProductTab @active"><a id="@string.Format("lumberProductLink{0}{1}", Model.LumberType.Id, Guid.Empty)" href="#@string.Format("lumberProductTab{0}{1}", Model.LumberType.Id, Guid.Empty)" data-toggle="tab"><span class="glyphicon glyphicon-plus"></span> Add</a></li>
+                        }
+                    </ul>
+                    <div class="tab-content">
+                        @{ LumberProductViewModel lumberProductViewModel;}
+                        @foreach (var lumberProduct in Model.LumberType.LumberProducts.OrderBy(p => p.LengthInMillimeters))
+                        {
+                            lumberProductViewModel = new LumberProductViewModel { Active = lumberProduct.Id == firstLumberTypeId, LumberProduct = lumberProduct };
+                            @Html.Partial("_LumberProductForm", lumberProductViewModel)
+                        }
+                        @if (Model.LumberType.Id != Guid.Empty)
+                        {
+                            lumberProductViewModel = new LumberProductViewModel { Active = !Model.LumberType.LumberProducts.Any(), LumberProduct = new LumberProduct { LumberTypeId = Model.LumberType.Id } };
+                            @Html.Partial("_LumberProductForm", lumberProductViewModel)
+                        }
+                    </div>
                 </div>
-            }
-        </div>
-    </div>
+            </div>
+        }
+    }
 </div>
