--- a/Thermory.Web/Views/Home/Index.cshtml
+++ b/Thermory.Web/Views/Home/Index.cshtml
@@ -15,6 +15,12 @@
 <h3>Progress Report:</h3>
 <ul>
     <li>
+        <h5>5/15/2016</h5>
+        <ul>
+            <li>Added ability to add and edit miscellaneous product catalog.</li>
+        </ul>
+    </li>
+    <li>
         <h5>5/13/2016</h5>
         <ul>
             <li>
