--- a/Thermory.Web/Views/SalesOrder/Review.cshtml
+++ b/Thermory.Web/Views/SalesOrder/Review.cshtml
@@ -19,6 +19,9 @@
         <div type="button" class="btn btn-danger" id="deleteButton" data-toggle="confirmation">
             <span class="glyphicon glyphicon-remove"></span> Delete
         </div>
+        <div type="button" class="btn btn-info" onclick="window.location = ('@Url.Action("Index", "SalesOrder")');">
+            <span class=" glyphicon glyphicon-arrow-left"></span> Back
+        </div>
         <br><br>
     </div>
 }
