--- a/Thermory.Web/Views/PurchaseOrder/Form.cshtml
+++ b/Thermory.Web/Views/PurchaseOrder/Form.cshtml
@@ -21,8 +21,8 @@
     <div type="button" class="btn btn-success" onclick="saveOrder();">
         <span class="glyphicon glyphicon-ok"></span> Save
     </div>
-    <div type="button" class="btn btn-primary" onclick="window.location = ('@Url.Action("Review", "PurchaseOrder", new RouteValueDictionary { { "id", Model.Order.Id } })');">
-        <span class=" glyphicon glyphicon-arrow-left"></span> Back
+    <div type="button" class="btn btn-danger" onclick="window.location = ('@Url.Action("Review", "PurchaseOrder", new RouteValueDictionary { { "id", Model.Order.Id } })');">
+        <span class=" glyphicon glyphicon-remove"></span> Cancel
     </div>
     <br />
     <br />
@@ -62,8 +62,8 @@
     <div type="button" class="btn btn-success" onclick="saveOrder();">
         <span class="glyphicon glyphicon-ok"></span> Save
     </div>
-    <div type="button" class="btn btn-primary" onclick="window.location = ('@Url.Action("Review", "PurchaseOrder", new RouteValueDictionary { { "id", Model.Order.Id } })');">
-        <span class=" glyphicon glyphicon-arrow-left"></span> Back
+    <div type="button" class="btn btn-danger" onclick="window.location = ('@Url.Action("Review", "PurchaseOrder", new RouteValueDictionary { { "id", Model.Order.Id } })');">
+        <span class=" glyphicon glyphicon-remove"></span> Cancel
     </div>
 </div>
 
