--- a/Thermory.Web/Views/Shared/_Layout.cshtml
+++ b/Thermory.Web/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     <nav class="navbar navbar-default" style="margin-bottom: 10px;">
                         <div class="container-fluid">
                             <!-- Collect the nav links, forms, and other content for toggling -->
-                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <div>
                                 <ul class="nav navbar-nav">
                                     @if (User.IsInRole(Role.InventoryMaster))
                                     {
