--- a/Thermory.Web/Views/Shared/Order/_LumberProductReview.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_LumberProductReview.cshtml
@@ -16,7 +16,7 @@
                 var totalPieces = 0;
                 <h3><strong>@category.Name:</strong> @subCategory.Name</h3>
                 <h5><em>@lumberType.Name</em></h5>
-                <table class="table table-striped table-condensed" style="width: 800px;">
+                <table class="table table-striped table-condensed">
                     <thead>
                         <tr>
                             <th>Length</th>
