--- a/Thermory.Web/Views/Shared/Order/_LumberTransactionDetails.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_LumberTransactionDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Thermory.Web.Models.LumberTransactionDetails
 
 <h3><strong>Lumber Changes</strong></h3>
-<table class="table table-striped table-condensed" style="width: 800px;">
+<table class="table table-striped table-condensed">
     <thead>
         <tr>
             <th>Category</th>
