--- a/Thermory.Web/Views/Shared/Order/_MiscellaneousProductReview.cshtml
+++ b/Thermory.Web/Views/Shared/Order/_MiscellaneousProductReview.cshtml
@@ -6,7 +6,7 @@
     foreach (var category in orderMiscCategories)
     {
         <h3><strong>@category.Name</strong></h3>
-        <table class="table table-striped table-condensed" style="width: 500px;">
+        <table class="table table-striped table-condensed">
             <thead>
                 <tr>
                     <th>Sub Category</th>
