--- a/Thermory.Web/Views/Catalog/_LumberCatalog.cshtml
+++ b/Thermory.Web/Views/Catalog/_LumberCatalog.cshtml
@@ -45,7 +45,7 @@
                 </tr>
             </table>
             <div class="panel panel-danger" id="lumberCategoryErrorPanel" style="display: none;">
-                <div class="panel-heading">Error</div>
+                <div class="panel-heading"><span class="glyphicon glyphicon-alert"></span> Error</div>
                 <div id="lumberCategoryError" class="panel-body"></div>
             </div>
         </div>
@@ -131,13 +131,15 @@
         var sortOrder = $('#sortOrder' + id).val();
         var width = $('#width' + id).val();
         var thickness = $('#thickness' + id).val();
+        var bundleSize = $('#bundle' + id).val();
         var subCategory = {
             LumberCategoryId: '@Model.Id',
             Id: id,
             Name: name,
             SortOrder: sortOrder,
             WidthInMillimeters: width,
-            ThicknessInMillimeters: thickness
+            ThicknessInMillimeters: thickness,
+            BundleSize: bundleSize
         };
 
         $.ajax({
@@ -156,6 +158,7 @@
                 $('#sortOrder' + id).text(subCategory.SortOrder);
                 $('#widthView' + id).text(subCategory.WidthInMillimeters);
                 $('#thicknessView' + id).text(subCategory.ThicknessInMillimeters);
+                $('#bundleView' + id).text(subCategory.BundleSize);
                 initiateViewMode('lumberSubCategory');
             },
             error: function (data) {
