--- a/Thermory.Web/Views/Catalog/_LumberProductForm.cshtml
+++ b/Thermory.Web/Views/Catalog/_LumberProductForm.cshtml
@@ -32,7 +32,7 @@
         </div>
     </div>
     <div class="panel panel-danger lumberProductErrorPanel" style="display: none;">
-        <div class="panel-heading">Error</div>
+        <div class="panel-heading"><span class="glyphicon glyphicon-alert"></span> Error</div>
         <div id="@string.Format("lumberProductError{0}", suffix)" class="panel-body"></div>
     </div>
 </div>
