--- a/Thermory.Web/Views/Catalog/_LumberTypeForm.cshtml
+++ b/Thermory.Web/Views/Catalog/_LumberTypeForm.cshtml
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div class="panel panel-danger lumberTypeErrorPanel" style="display: none;">
-        <div class="panel-heading">Error</div>
+        <div class="panel-heading"><span class="glyphicon glyphicon-alert"></span> Error</div>
         <div id="@string.Format("lumberTypeError{0}{1}", Model.LumberType.LumberSubCategoryId, @Model.LumberType.Id)" class="panel-body"></div>
     </div>
     @{
