--- a/Thermory.Web/Views/Catalog/_MiscCatalog.cshtml
+++ b/Thermory.Web/Views/Catalog/_MiscCatalog.cshtml
@@ -45,7 +45,7 @@
                 </tr>
             </table>
             <div class="panel panel-danger" id="miscCategoryErrorPanel" style="display: none;">
-                <div class="panel-heading">Error</div>
+                <div class="panel-heading"><span class="glyphicon glyphicon-alert"></span> Error</div>
                 <div id="miscCategoryError" class="panel-body"></div>
             </div>
         </div>
