--- a/Thermory.Web/Views/Catalog/_MiscSubCategoryForm.cshtml
+++ b/Thermory.Web/Views/Catalog/_MiscSubCategoryForm.cshtml
@@ -31,7 +31,7 @@
     </div>
     <br />
     <div class="panel panel-danger miscSubCategoryErrorPanel" style="display: none;">
-        <div class="panel-heading">Error</div>
+        <div class="panel-heading"><span class="glyphicon glyphicon-alert"></span> Error</div>
         <div id="@string.Format("miscSubCategoryError{0}", @Model.SubCategory.Id)" class="panel-body"></div>
     </div>
     @{
