--- a/Thermory.Web/Views/SalesOrder/Review.cshtml
+++ b/Thermory.Web/Views/SalesOrder/Review.cshtml
@@ -17,7 +17,7 @@
             <span class="glyphicon glyphicon-edit"></span> Edit
         </div>
         <div type="button" class="btn btn-danger" id="deleteButton" data-toggle="confirmation">
-            <span class="glyphicon glyphicon-remove"></span> Delete
+            <span class="glyphicon glyphicon-trash"></span> Delete
         </div>
         <div type="button" class="btn btn-info" onclick="window.location = ('@Url.Action("Index", "SalesOrder")');">
             <span class=" glyphicon glyphicon-arrow-left"></span> Back
